Fix konflux apply Go setup
Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

--- a/.github/workflows/apply-konflux-manifests.yaml
+++ b/.github/workflows/apply-konflux-manifests.yaml
@@ -10,14 +10,14 @@ jobs:
   konflux-apply:
     name: Apply Konflux Manifests
     runs-on: ubuntu-latest
-    env:
-      GOPATH: ${{ github.workspace }}
     steps:
-      - name: Checkout openshift-knative/hack
+      - name: Check out code
         uses: actions/checkout@v4
 
       - name: Setup Golang
         uses: actions/setup-go@v5
+        with:
+          go-version-file: go.mod
 
       - name: Setup kubeconfig
         env:
