Add kntest to BUildImageDockerfile.template
Required for Serving:
https://github.com/openshift-knative/serving/blob/release-v1.15/openshift/ci-operator/build-image/Dockerfile#L14

--- a/cmd/generate/BuildImageDockerfile.template
+++ b/cmd/generate/BuildImageDockerfile.template
@@ -18,6 +18,7 @@ RUN wget https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 && 
 RUN ./get-helm-3 --version v3.11.3 --no-sudo && helm version
 
 RUN GOFLAGS='' go install github.com/mikefarah/yq/v3@latest
+RUN GOFLAGS='' go install knative.dev/test-infra/tools/kntest/cmd/kntest@latest
 
 # go install creates $GOPATH/.cache with root permissions, we delete it here
 # to avoid permission issues with the runtime users
