konflux-apply when '.konflux' changes
Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

--- a/.github/workflows/apply-konflux-manifests.yaml
+++ b/.github/workflows/apply-konflux-manifests.yaml
@@ -3,6 +3,9 @@ on:
   schedule:
     - cron: "0 6 * * *" # Daily at 06:00.
   workflow_dispatch: # Manual workflow trigger
+  push:
+    paths:
+      - ".konflux/**"
 defaults:
   run:
     shell: bash
