--- a/cmd/generate/Dockerfile.template
+++ b/cmd/generate/Dockerfile.template
@@ -16,7 +16,13 @@ FROM $GO_RUNTIME
 ARG VERSION={{.version}}
 
 # Install zoneinfo.
-RUN microdnf install tzdata {{.additional_packages}}
+RUN microdnf install tzdata
+
+{{- if .additional_packages}}
+
+# Install additional packages
+RUN microdnf install {{.additional_packages}}
+{{- end}}
 
 USER 65532
 
