--- a/cmd/generate/Dockerfile.template
+++ b/cmd/generate/Dockerfile.template
@@ -15,8 +15,7 @@ FROM $GO_RUNTIME
 
 ARG VERSION={{.version}}
 
-# Install zoneinfo.
-RUN microdnf install tzdata
+RUN microdnf install tzdata {{.additional_packages}}
 
 USER 65532
 
