--- a/cmd/generate/Dockerfile.template
+++ b/cmd/generate/Dockerfile.template
@@ -19,7 +19,7 @@ RUN microdnf install tzdata {{.additional_packages}}
 
 USER 65532
 
-COPY --from=builder /usr/bin/main /usr/bin/main
+COPY --from=builder /usr/bin/main {{.app_file}}
 
 {{- if .post_build_instructions }}
 
@@ -35,4 +35,4 @@ LABEL \
       description="Red Hat OpenShift Serverless 1 {{.project}}{{.component}}" \
       io.k8s.display-name="Red Hat OpenShift Serverless 1 {{.project}}{{.component}}"
 
-ENTRYPOINT ["/usr/bin/main"]
+ENTRYPOINT ["{{.app_file}}"]
