--- a/pkg/project/testoutput/openshift/ci-operator/knative-images/discover/Dockerfile
+++ b/pkg/project/testoutput/openshift/ci-operator/knative-images/discover/Dockerfile
@@ -19,7 +19,7 @@ RUN microdnf install tzdata
 
 USER 65532
 
-COPY --from=builder /usr/bin/main /usr/bin/main
+COPY --from=builder /usr/bin/main /usr/bin/discover
 
 LABEL \
       com.redhat.component="openshift-serverless-1-knative-discover-rhel8-container" \
@@ -30,4 +30,4 @@ LABEL \
       description="Red Hat OpenShift Serverless 1 Knative Discover" \
       io.k8s.display-name="Red Hat OpenShift Serverless 1 Knative Discover"
 
-ENTRYPOINT ["/usr/bin/main"]
+ENTRYPOINT ["/usr/bin/discover"]
