tzdata is part of ubi8-minimal
We don't need to install it:
```
pierdipi@pierdipi openshift-knative-hack (main) $ docker run -ti --rm registry.access.redhat.com/ubi8/ubi-minimal /bin/bash
Unable to find image 'registry.access.redhat.com/ubi8/ubi-minimal:latest' locally
latest: Pulling from ubi8/ubi-minimal
Digest: sha256:a47c89f02b39a98290f88204ed3d162845db0a0c464b319c2596cfd1e94b444e
Status: Downloaded newer image for registry.access.redhat.com/ubi8/ubi-minimal:latest
[root@552ae7b1786c /]# rpm -qa tzdata
tzdata-2024a-1.el8.noarch
```

Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

--- a/cmd/generate/dockerfile-templates/DefaultDockerfile.template
+++ b/cmd/generate/dockerfile-templates/DefaultDockerfile.template
@@ -15,8 +15,10 @@ FROM $GO_RUNTIME
 
 ARG VERSION={{.version}}
 
-RUN microdnf install tzdata {{.additional_packages}}
+{{ if .additional_packages }}
+RUN microdnf install {{ .additional_packages }}
 
+{{ end }}
 COPY --from=builder /usr/bin/main {{.app_file}}
 
 USER 65532
