--- a/cmd/generate/dockerfile-templates/DefaultDockerfile.template
+++ b/cmd/generate/dockerfile-templates/DefaultDockerfile.template
@@ -15,10 +15,11 @@ FROM $GO_RUNTIME
 
 ARG VERSION={{.version}}
 
-{{ if .additional_packages }}
-RUN microdnf install {{ .additional_packages }}
+{{- if .additional_packages }}
 
-{{ end }}
+RUN microdnf install {{ .additional_packages }}
+{{- end }}
+
 COPY --from=builder /usr/bin/main {{.app_file}}
 
 USER 65532
