Integrate with prowgen Konflux update
Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

--- a/config/eventing-kafka-broker.yaml
+++ b/config/eventing-kafka-broker.yaml
@@ -47,3 +47,5 @@ repositories:
     namespace: openshift
   repo: eventing-kafka-broker
   slackChannel: '#knative-eventing-ci'
+  pomFiles:
+  - data-plane/pom.xml
