--- a/cmd/generate/dockerfile-templates/BuildImageDockerfile.template
+++ b/cmd/generate/dockerfile-templates/BuildImageDockerfile.template
@@ -1,11 +1,15 @@
 # DO NOT EDIT! Generated Dockerfile.
 
-FROM {{.ocpToolsImage}} as tools
+FROM registry.ci.openshift.org/ocp/4.17:cli-artifacts as tools
 
 # Dockerfile to bootstrap build and test in openshift-ci
 FROM {{.builder}} as builder
 
-COPY --from=tools /usr/bin/oc /usr/bin/kubectl /usr/bin/
+ARG TARGETARCH
+
+COPY --from=tools /usr/share/openshift/linux_$TARGETARCH/oc.rhel8 /usr/bin/oc
+
+RUN ln -s /usr/bin/oc /usr/bin/kubectl
 
 RUN yum install -y httpd-tools
 
