Use kubectl and oc from ocp tools image (#244)
* Use kubectl and oc from ocp tools image

* Add comment to builderImageFormat to also update the tools image OCP version

* Use cli-artifacts image which contains all oc variants

--- a/cmd/generate/dockerfile-templates/BuildImageDockerfile.template
+++ b/cmd/generate/dockerfile-templates/BuildImageDockerfile.template
@@ -1,16 +1,17 @@
 # DO NOT EDIT! Generated Dockerfile.
 
+FROM registry.ci.openshift.org/ocp/4.17:cli-artifacts as tools
+
 # Dockerfile to bootstrap build and test in openshift-ci
 FROM {{.builder}} as builder
 
-RUN echo "[kubernetes]" >> /etc/yum.repos.d/kubernetes.repo && \
-    echo "name=Kubernetes" >> /etc/yum.repos.d/kubernetes.repo && \
-    echo "baseurl=https://pkgs.k8s.io/core:/stable:/v1.29/rpm/" >> /etc/yum.repos.d/kubernetes.repo && \
-    echo "enabled=1" >> /etc/yum.repos.d/kubernetes.repo && \
-    echo "gpgcheck=1" >> /etc/yum.repos.d/kubernetes.repo && \
-    echo "gpgkey=https://pkgs.k8s.io/core:/stable:/v1.29/rpm/repodata/repomd.xml.key" >> /etc/yum.repos.d/kubernetes.repo
+ARG TARGETARCH
 
-RUN yum install -y kubectl httpd-tools
+COPY --from=tools /usr/share/openshift/linux_$TARGETARCH/oc.rhel8 /usr/bin/oc
+
+RUN ln -s /usr/bin/oc /usr/bin/kubectl
+
+RUN yum install -y httpd-tools
 
 RUN wget https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 && \
     chmod 700 ./get-helm-3
