--- a/.konflux/applications/serverless-operator-135/components/imagerepositories/serverless-index-135.yaml
+++ b/.konflux/applications/serverless-operator-135/components/imagerepositories/serverless-index-135.yaml
@@ -4,10 +4,10 @@ metadata:
   annotations:
     image-controller.appstudio.redhat.com/update-component-image: "true"
   labels:
-    appstudio.redhat.com/application: serverless-operator-release-135
+    appstudio.redhat.com/application: serverless-operator-135
     appstudio.redhat.com/component: serverless-index-135
   name: serverless-index-135
 spec:
   image:
-    name: serverless-operator-release-135/serverless-index
+    name: serverless-operator-135/serverless-index
     visibility: public
