Enable RPMs pre-fetching for hermetic builds
Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

--- a/pkg/konfluxgen/kustomize/kustomize-docker-build/kustomization.yaml
+++ b/pkg/konfluxgen/kustomize/kustomize-docker-build/kustomization.yaml
@@ -7,5 +7,8 @@ patches:
   - path: ../additional_tags.patch.yaml
     target:
       name: docker-build
+  - path: ../prefetch-input_dev-package-managers.yaml
+    target:
+      name: docker-build
 openapi:
   path: ../pipeline_schema.json
