--- a/pkg/konfluxgen/kustomize/kustomize-fbc-builder/kustomization.yaml
+++ b/pkg/konfluxgen/kustomize/kustomize-fbc-builder/kustomization.yaml
@@ -7,5 +7,8 @@ patches:
   - path: ../additional_tags.patch.yaml
     target:
       name: fbc-builder
+  - path: use_hermetic_param.yaml
+    target:
+      name: fbc-builder
 openapi:
   path: ../pipeline_schema.json
