--- a/cmd/generate/dockerfile-templates/DefaultDockerfile.template
+++ b/cmd/generate/dockerfile-templates/DefaultDockerfile.template
@@ -31,6 +31,8 @@ LABEL \
       summary="Red Hat OpenShift Serverless 1 {{.project}}{{.component}}" \
       maintainer="serverless-support@redhat.com" \
       description="Red Hat OpenShift Serverless 1 {{.project}}{{.component}}" \
-      io.k8s.display-name="Red Hat OpenShift Serverless 1 {{.project}}{{.component}}"
+      io.k8s.display-name="Red Hat OpenShift Serverless 1 {{.project}}{{.component}}" \
+      io.k8s.description="Red Hat OpenShift Serverless {{.project}}{{.component}}" \
+      io.openshift.tags={{.component}}
 
 ENTRYPOINT ["{{.app_file}}"]
