--- a/cmd/generate/dockerfile-templates/DefaultDockerfile.template
+++ b/cmd/generate/dockerfile-templates/DefaultDockerfile.template
@@ -33,6 +33,6 @@ LABEL \
       description="Red Hat OpenShift Serverless 1 {{.project}}{{.component}}" \
       io.k8s.display-name="Red Hat OpenShift Serverless 1 {{.project}}{{.component}}" \
       io.k8s.description="Red Hat OpenShift Serverless {{.project}}{{.component}}" \
-      io.openshift.tags={{.component}}
+      io.openshift.tags="{{.component_dashcase}}"
 
 ENTRYPOINT ["{{.app_file}}"]
