--- a/cmd/generate/dockerfile-templates/FuncUtilDockerfile.template
+++ b/cmd/generate/dockerfile-templates/FuncUtilDockerfile.template
@@ -35,6 +35,6 @@ LABEL \
       description="Red Hat OpenShift Serverless 1 {{.project}}{{.component}}" \
       io.k8s.display-name="Red Hat OpenShift Serverless 1 {{.project}}{{.component}}" \
       io.k8s.description="Red Hat OpenShift Serverless {{.project}}{{.component}}" \
-      io.openshift.tags={{.component}}
+      io.openshift.tags="{{.component_dashcase}}"
 
 ENTRYPOINT ["/usr/bin/bash"]
