--- a/config/serverless-operator.yaml
+++ b/config/serverless-operator.yaml
@@ -13,6 +13,8 @@ config:
       - onDemand: true
         version: "4.13"
     release-1.35:
+      prowgen:
+        enabled: false
       konflux:
         enabled: false
         imageOverrides:
