Define image overrides in serverless-operator configuration (#290)
* Put image overrides in config/serverless-operator.yaml

* Read s-o config properly and disable konflux for non-existent branch

* Prowgen flag

* Fallback to main when specific branch configuration does not exist

--- a/config/serverless-operator.yaml
+++ b/config/serverless-operator.yaml
@@ -12,6 +12,15 @@ config:
         version: "4.15"
       - onDemand: true
         version: "4.13"
+    release-1.35:
+      prowgen:
+        enabled: false
+      konflux:
+        imageOverrides:
+          - name: GO_BUILDER
+            pullSpec: "brew.registry.redhat.io/rh-osbs/openshift-golang-builder:rhel_8_golang_1.22"
+          - name: GO_RUNTIME
+            pullSpec: "registry.access.redhat.com/ubi8/ubi-minimal"
 repositories:
 - customConfigs:
   - name: aws-ovn
