Enable hermetic builds for Go components
Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

--- a/pkg/konfluxgen/pipeline-run.template.yaml
+++ b/pkg/konfluxgen/pipeline-run.template.yaml
@@ -26,6 +26,8 @@ spec:
       value: [{{{ range $arg := .BuildArgs }}} {{{ $arg }}}, {{{ end }}}]
     - name: git-url
       value: '{{source_url}}'
+    - name: hermetic
+      value: "{{{ .Hermetic }}}"
     {{{- if eq .Event "pull_request" }}}
     - name: image-expires-after
       value: 5d
