--- a/config/serverless-operator.yaml
+++ b/config/serverless-operator.yaml
@@ -14,7 +14,7 @@ config:
         version: "4.13"
     release-1.35:
       prowgen:
-        enabled: false
+        disabled: true
       konflux:
         imageOverrides:
           - name: GO_BUILDER
