--- a/config/eventing-kafka-broker.yaml
+++ b/config/eventing-kafka-broker.yaml
@@ -2,34 +2,40 @@ config:
   branches:
     release-next:
       openShiftVersions:
-      - version: "4.15"
+      - version: "4.16"
+        useClusterPool: true
       - onDemand: true
         version: "4.13"
     release-v1.10:
       openShiftVersions:
       - skipCron: true
-        version: "4.15"
+        version: "4.16"
+        useClusterPool: true
     release-v1.11:
       openShiftVersions:
       - skipCron: true
-        version: "4.15"
+        version: "4.16"
+        useClusterPool: true
       - onDemand: true
         version: "4.12"
     release-v1.12:
       openShiftVersions:
-      - version: "4.15"
+      - version: "4.16"
+        useClusterPool: true
       - onDemand: true
         version: "4.12"
     release-v1.14:
       openShiftVersions:
-      - version: "4.15"
+      - version: "4.16"
+        useClusterPool: true
       - onDemand: true
         version: "4.13"
     release-v1.15:
       konflux:
         enabled: true
       openShiftVersions:
-      - version: "4.15"
+      - version: "4.16"
+        useClusterPool: true
       - onDemand: true
         version: "4.13"
 repositories:
