--- a/config/serving-net-istio.yaml
+++ b/config/serving-net-istio.yaml
@@ -3,25 +3,29 @@ config:
     release-v1.11:
       openShiftVersions:
       - skipCron: true
-        version: "4.15"
+        version: "4.16"
+        useClusterPool: true
       - onDemand: true
         skipCron: true
         version: "4.12"
     release-v1.12:
       openShiftVersions:
-      - version: "4.15"
+      - version: "4.16"
+        useClusterPool: true
       - onDemand: true
         version: "4.12"
     release-v1.14:
       openShiftVersions:
-      - version: "4.15"
+      - version: "4.16"
+        useClusterPool: true
       - onDemand: true
         version: "4.13"
     release-v1.15:
       konflux:
         enabled: true
       openShiftVersions:
-      - version: "4.15"
+      - version: "4.16"
+        useClusterPool: true
       - onDemand: true
         version: "4.13"
 repositories:
