Support Hermetic java builds
To support hermetic builds for Java, we will follow the POC here:
https://github.com/openshift-knative/eventing-kafka-broker/pull/1273.

While this currently doesn't pass the enterprise contract, I've
validated that it will in the future with Konflux team here:
https://redhat-internal.slack.com/archives/C04PZ7H0VA8/p1727247236771179
that it will in the future with the addition of `KONFLUX-298`.

Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

--- a/config/eventing-kafka-broker.yaml
+++ b/config/eventing-kafka-broker.yaml
@@ -1,6 +1,10 @@
 config:
   branches:
     release-next:
+      konflux:
+        javaImages:
+        - .*eventing-kafka-broker-receiver
+        - .*eventing-kafka-broker-dispatcher
       openShiftVersions:
       - useClusterPool: true
         version: "4.16"
