Fix Java hermetic builds pipeline and configurations
Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

--- a/config/eventing-kafka-broker.yaml
+++ b/config/eventing-kafka-broker.yaml
@@ -41,6 +41,9 @@ config:
       - .*hermetic.*
       konflux:
         enabled: true
+        javaImages:
+        - .*eventing-kafka-broker-receiver
+        - .*eventing-kafka-broker-dispatcher
       openShiftVersions:
       - useClusterPool: true
         version: "4.16"
