Add snyk organization id
This will allow viewing scan reports in the UI.

Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

--- a/pkg/konfluxgen/kustomize/kustomize-docker-build/kustomization.yaml
+++ b/pkg/konfluxgen/kustomize/kustomize-docker-build/kustomization.yaml
@@ -13,5 +13,8 @@ patches:
   - path: ../patch_source_image.patch.yaml
     target:
       name: docker-build
+  - path: ../patch_snyk_args.patch.yaml
+    target:
+      name: docker-build
 openapi:
   path: ../pipeline_schema.json
