--- a/config/kn-plugin-func.yaml
+++ b/config/kn-plugin-func.yaml
@@ -5,6 +5,13 @@ config:
       - skipCron: true
         useClusterPool: true
         version: "4.16"
+    release-v1.15:
+      konflux:
+        enabled: true
+      openShiftVersions:
+      - skipCron: true
+        useClusterPool: true
+        version: "4.16"
     serverless-1.34:
       openShiftVersions:
       - skipCron: true
